@@ -1844,12 +1844,15 @@ Consult the [[Special:Log/delete|deletion log]] for a record of recent deletions
 'uctop'         => ' (top)' ,
 'newbies'       => 'newbies',
 
-'sp-contributions-newest' => 'Newest',
-'sp-contributions-oldest' => 'Oldest',
-'sp-contributions-newer'  => 'Newer $1',
-'sp-contributions-older'  => 'Older $1',
+'sp-contributions-newest'      => 'Newest',
+'sp-contributions-oldest'      => 'Oldest',
+'sp-contributions-newer'       => 'Newer $1',
+'sp-contributions-older'       => 'Older $1',
 'sp-contributions-newbies-sub' => 'For newbies',
 'sp-contributions-blocklog'    => 'Block log',
+'sp-contributions-search'      => 'Search for contributions',
+'sp-contributions-username'    => 'IP Address or username:',
+'sp-contributions-submit'      => 'Search',
 
 'sp-newimages-showfrom' => 'Show new images starting from $1',
 
